--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sane-backends (1.0.24-5) unstable; urgency=medium
+
+  * debian/rules:
+    - change saned.service to saned@.service to install it as
+      template (Closes: #769196).
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Wed, 10 Dec 2014 11:50:44 +0100
+
 sane-backends (1.0.24-4) unstable; urgency=medium
 
   * debian/rules:
