--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+sane-backends (1.0.24-6) unstable; urgency=medium
+
+  * Revert changes from 1.0.24-5.
+  * Rename sane-utils.saned.service to sane-utils.saned@.service to
+    install it as template (Closes: #769196).
+  * For test for newer versions of systemd:
+    - New debian/patches/0500-systemd_configure.patch 
+      + Add part into configure.in to find systemd >=209
+    - debian/control:
+      + Add autoconf and libsystemd-dev to Built-Depends.
+    - debian/rules:
+      + Add autoconf before running configure to build the patched
+        configure script.
+    - Thanks to Michael Biebl <biebl@debian.org>.
+  * Change sane-utils.saned@.service and sane-utils.saned.socket 
+    for running as template (Closes: #772955).
+  * debian/sane-utils.postinst:
+    - Add part to move the homedir from /home/saned to /var/lib/saned.
+      (Closes: #665915)
+  * New debian/sane-utils.lintian-overrides:
+    - Override postrm-contains-additional-updaterc.d-calls.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 13 Dec 2014 11:20:55 +0100
+
 sane-backends (1.0.24-5) unstable; urgency=medium
 
   * debian/rules:
