--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+sane-backends (1.0.24-8) unstable; urgency=medium
+
+  * New debian/patch/0100-usb3-corrections.patch:
+    - Backport of upstream Vcc to correct USB3/xhci problems (Closes: #738592).
+  * debian/saned@.service:
+    - Move Alias to section [Install] (Closes: #773371).
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 26 Dec 2014 14:00:20 +0100
+
 sane-backends (1.0.24-7) unstable; urgency=medium
 
   * debian/rules:
