--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sane-backends (1.0.24-9) UNRELEASED; urgency=medium
+
+  * Correct typo and add missing "-q" to line 33 of
+    debian/sane-utils.postinst (Closes: #773826).
+    - Thanks to "Nelson A. de Oliveira" <naoliv@debian.org>
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 28 Dec 2014 10:50:14 +0100
+
 sane-backends (1.0.24-8) unstable; urgency=medium
 
   * New debian/patches/0100-usb3-corrections.patch:
