--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,19 @@
-sane-backends (1.0.24-9) UNRELEASED; urgency=medium
+sane-backends (1.0.24-9) unstable; urgency=medium
 
-  * Correct typo and add missing "-q" to line 33 of
-    debian/sane-utils.postinst (Closes: #773826).
-    - Thanks to "Nelson A. de Oliveira" <naoliv@debian.org>
+  * debian/sane-utils.postinst:
+    - Correct typo and add missing "-q" at line 33
+      (Closes: #773826).
+      Thanks to "Nelson A. de Oliveira" <naoliv@debian.org>.
+    - If scanbd is running add start/stop around the move of the 
+      home directory (Closes: #774941).
+      Thanks to "Olaf Meeuwissen" <olaf.meeuwissen@avasys.jp>.
   * debian/rules:
     - Add line to extract the version from debian/changelog.
     - Add version string to dpkg-gensymbols.
   * debian/copyright:
-    - Add years to 2014-2015 on my debian/* tag.
+    - Add year to 2015 on my debian/* tag.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 28 Dec 2014 10:50:14 +0100
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 10 Jan 2015 13:56:10 +0100
 
 sane-backends (1.0.24-8) unstable; urgency=medium
 
