--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sane-backends (1.0.24-10) UNRELEASED; urgency=medium
+
+  * New debian/libsane.TROUBLESHOOTING.debian:
+    - Add part for "usbfs: interface 1 claimed by usblp while ‘scanimage’ sets
+      config #1 (Closes: #726588).
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 18 Jan 2015 11:46:18 +0100
+
 sane-backends (1.0.24-9) unstable; urgency=medium
 
   * debian/sane-utils.postinst:
