--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ sane-backends (1.0.24-10) UNRELEASED; urgency=medium
   * New debian/libsane.TROUBLESHOOTING.debian:
     - Add part for "usbfs: interface 1 claimed by usblp while ‘scanimage’ sets
       config #1 (Closes: #726588).
+  * Add link to TROUBLESHOOTING.debian into debian/README.debian.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 18 Jan 2015 11:46:18 +0100
 
