saned@.service: Remove Alias from [Install] Section

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ sane-backends (1.0.24-10) UNRELEASED; urgency=medium
       + libsane-dbg: libsane-extras-dbg (<< 1.0.18.14)
   * debian/rules:
     - Enable pnm backend for testing.
+  * debian/saned@.service:
+    - Remove Alias from [Install] Section (Closes: #778268).
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 18 Jan 2015 11:46:18 +0100
 
