--- a/debian/changelog
+++ b/debian/changelog
@@ -18,9 +18,14 @@ sane-backends (1.0.24-10) unstable; urgency=medium
       + libsane: libsane-extras (<< 1.0.18.14)
       + libsane-dev: libsane-extras-dev (<< 1.0.18.14)
       + libsane-dbg: libsane-extras-dbg (<< 1.0.18.14)
+    - Remove "libv4l-dev [linux-any]" from Build-Depends and Depends.
   * debian/rules:
     - Enable pnm backend for testing.
     - Remove override_dh_builddeb because compression xz is now standard.
+    - Add configure parameter --without-vl4 to disable v4l
+      backend (Closes: #446015).
+      + The backend is writen for the kernel 2.4 and v4l. Now
+        we are at kernel 3.16 and v4l2.
   * debian/saned@.service:
     - Remove Alias from [Install] Section (Closes: #778268).
   * sane-utils.[postinst|postrm]:
@@ -32,13 +37,12 @@ sane-backends (1.0.24-10) unstable; urgency=medium
     - New debian/tests/control
     - New debian/tests/start-net:
       - Testing network interface activation with systemd.
-  * debian/rules:
-    - Add configure parameter --without-vl4 to disable v4l
-      backend (Closes: #446015).
-      + The backend is writen for the kernel 2.4 and v4l. Now
-        we are at kernel 3.16 and v4l2.
   * Refresh patches:
     - debian/patches/sane-desc.c_debian_mods.patch.
+  * Add symbols file:
+    - debian/rules: rewrite override_dh_makeshlibs.
+  * Comment out "set -e" at debian/sane-utils.postrm to prevent
+    piuparts errors.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 18 Jan 2015 11:46:18 +0100
 
