--- a/doc/sane-pixma.man
+++ b/doc/sane-pixma.man
@@ -1,4 +1,4 @@
-.TH "sane\-pixma" "5" "29 Oct 2014" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
+.TH "sane\-pixma" "5" "03 Apr 2015" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
 .IX sane\-pixma
 .SH NAME
 sane\-pixma \- SANE backend for Canon Multi-Function Printers and CanoScan Scanners
@@ -15,11 +15,11 @@ over IPv4 as well as IPv6 (MFNP over IPv6 is untested).
 Currently, the following models work with this backend:
 .PP
 .RS
-PIXMA MG2100, MG2400, MG2900, MG3100, MG3200, MG3500, MG4200
+PIXMA MG2100, MG2200, MG2400, MG2500, MG2900, MG3100, MG3200
 .br
-PIXMA MG5100, MG5200, MG5300, MG5500, MG6100, MG6200, MG6300
+PIXMA MG3500, MG4200, MG5100, MG5200, MG5300, MG5500, MG6100
 .br
-PIXMA MG7100, MG8200
+PIXMA MG6200, MG6300, MG6400, MG7100, MG8200
 .br
 PIXMA MP140, MP150, MP160, MP170, MP180, MP190
 .br
@@ -77,21 +77,21 @@ in the backend so that they get recognized and activated.
 Feedback in the sane\-devel mailing list welcome.
 .PP
 .RS
-PIXMA E400, E460, E500, E510, E560, E600, E610
+PIXMA E400, E460, E480, E500, E510, E560, E600, E610
 .br
-PIXMA MG2200, MG2500, MG4100, MG5400, MG5600
-.br
-PIXMA MG6400, MG6500, MG6600, MG7500, MG8100
+PIXMA MG4100, MG5400, MG5600, MG6500, MG6600, MG7500, MG8100
 .br
 PIXMA MP375R, MP493, MP495, MP740
 .br
-PIXMA MX320, MX390, MX430, MX450, MX470, MX710
+PIXMA MX320, MX390, MX430, MX450, MX470, MX490, MX710
 .br
-imageCLASS MF5630, MF5650, MF5750, MF8030, MF8170c
+imageCLASS MF810/820, MF5630, MF5650, MF5750, MF8030, MF8170c
 .br
 imageRUNNER 1133
 .br
-i-SENSYS MF5880dn, MF6680dn, MF8500C Series
+i-SENSYS MF210 Series, MF220 Series, MF5880dn, MF5900 Series
+.br
+i-SENSYS MF6100 Series, MF6680dn, MF8500C Series
 .br
 MAXIFY MB2000, MB2300, MB5000, MB5300
 .RE
