--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,63 @@
+sane-backends (1.0.25+git20150425-1) experimental; urgency=low
+
+  * Build from daily snapshot sane-backends-git20150425.tar.gz.
+  * Refresh patches:
+    - debian/patches/dll_backend_conf.patch
+    - debian/patches/libsane_deps.patch
+    - debian/patches/multiarch_dll_search_path.patch
+    - debian/patches/multiarch_manpages_libdir.patch
+    - debian/patches/sane-desc.c_debian_mods.patch.
+  * New debian/TROUBLESHOOTING.debian:
+    - Add part for "usbfs: interface 1 claimed by usblp while ‘scanimage’ sets
+      config #1.
+  * Add link to TROUBLESHOOTING.debian into debian/README.debian.
+  * New debian/patches/001-scanimage_manpage.patch:
+    - Add remark for parameter to manpage.
+  * New debian/patches/0005-mk_reproducible_results.patch:
+    - Make builds reproducible.
+  * debian/control:
+    - On package libsane-dev change Depends from libgphoto2-2-dev to
+      libgphoto2-dev (auto-libgphoto2 transition).
+    - On package libsane remove package hpoj from Suggests
+    - Remove useless replaces because latest release in stable is 1.0.22-7:
+      + sane-utils: libsane (<< 1.0.11-4)
+      + libsane-common: libsane (<< 1.0.22-4~)
+      + libsane: libsane-extras (<< 1.0.18.14)
+      + libsane-dev: libsane-extras-dev (<< 1.0.18.14)
+      + libsane-dbg: libsane-extras-dbg (<< 1.0.18.14)
+    - Remove "libv4l-dev [linux-any]" from Build-Depends and Depends.
+  * debian/rules:
+    - Enable pnm backend for testing.
+    - Remove override_dh_builddeb because compression xz is now standard.
+    - Add configure parameter --without-vl4 to disable v4l
+      backend.
+      + The backend is writen for the kernel 2.4 and v4l. Now
+        we are at kernel 3.16 and v4l2.
+  * debian/saned@.service:
+    - Remove Alias from [Install] Section.
+  * sane-utils.[postinst|postrm]:
+    - Replace fixed path with a POSIX-compliant shell function to check
+      the existence of a command.
+  * Add autopkgtests:
+    - debian/control:
+      + Add Testsuite: autopkgtest.
+    - New debian/tests/control.
+    - New debian/tests/start-net:
+      - Testing network interface activation with systemd.
+  * Add symbols file:
+    - debian/rules: rewrite override_dh_makeshlibs.
+  * Comment out "set -e" at debian/sane-utils.postrm to prevent
+    piuparts errors.
+  * debian/saned@.service:
+    - Change StandardInput=socket to StandardInput=null to enable
+      working over network.
+  * New debian/patches/0510-disable-html-tests.patch:
+    - Disable some html tests because 
+      debian/patches/sane-desc.c_debian_mods.patch change some links to
+      the doc directory.
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 26 Apr 2015 16:21:51 +0200
+
 sane-backends (1.0.25+git20150102-1) experimental; urgency=medium
 
   * Build from daily snapshot sane-backends-git20150102.tar.gz.
