--- a/debian/changelog
+++ b/debian/changelog
@@ -6,10 +6,10 @@ sane-backends (1.0.25+git20150425-1) experimental; urgency=low
     - debian/patches/libsane_deps.patch
     - debian/patches/multiarch_dll_search_path.patch
     - debian/patches/multiarch_manpages_libdir.patch
-    - debian/patches/sane-desc.c_debian_mods.patch.
+    - debian/patches/sane-desc.c_debian_mods.patch
   * New debian/TROUBLESHOOTING.debian:
-    - Add part for "usbfs: interface 1 claimed by usblp while ‘scanimage’ sets
-      config #1.
+    - Add part for "usbfs: interface 1 claimed by usblp while
+      ‘scanimage’ sets config #1.
   * Add link to TROUBLESHOOTING.debian into debian/README.debian.
   * New debian/patches/001-scanimage_manpage.patch:
     - Add remark for parameter to manpage.
@@ -29,9 +29,8 @@ sane-backends (1.0.25+git20150425-1) experimental; urgency=low
   * debian/rules:
     - Enable pnm backend for testing.
     - Remove override_dh_builddeb because compression xz is now standard.
-    - Add configure parameter --without-vl4 to disable v4l
-      backend.
-      + The backend is writen for the kernel 2.4 and v4l. Now
+    - Add configure parameter --without-vl4 to disable v4l backend:
+      + The backend was written for the kernel 2.4 and v4l, now
         we are at kernel 3.16 and v4l2.
   * debian/saned@.service:
     - Remove Alias from [Install] Section.
@@ -43,17 +42,17 @@ sane-backends (1.0.25+git20150425-1) experimental; urgency=low
       + Add Testsuite: autopkgtest.
     - New debian/tests/control.
     - New debian/tests/start-net:
-      - Testing network interface activation with systemd.
+      + Test network interface activation with systemd.
   * Add symbols file:
-    - debian/rules: rewrite override_dh_makeshlibs.
-  * Comment out "set -e" at debian/sane-utils.postrm to prevent
-    piuparts errors.
+    - debian/rules: Rewrite override_dh_makeshlibs.
+  * Comment out "set -e" at debian/sane-utils.postrm
+    to fix some minor errors during piuparts.
   * debian/saned@.service:
     - Change StandardInput=socket to StandardInput=null to enable
       working over network.
   * New debian/patches/0510-disable-html-tests.patch:
-    - Disable some html tests because 
-      debian/patches/sane-desc.c_debian_mods.patch change some links to
+    - Disable some HTML tests because debian/patches/
+      sane-desc.c_debian_mods.patch changes some links to
       the doc directory.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 26 Apr 2015 16:21:51 +0200
