--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-sane-backends (1.0.24-10) unstable; urgency=low
+sane-backends (1.0.24-10) unstable; urgency=high
 
   * New debian/TROUBLESHOOTING.debian:
-    - Add part for "usbfs: interface 1 claimed by usblp while ‘scanimage’ sets
-      config #1 (Closes: #726588).
+    - Add part for "usbfs: interface 1 claimed by usblp while
+      ‘scanimage’ sets config #1 (Closes: #726588).
   * Add link to TROUBLESHOOTING.debian into debian/README.debian.
   * New debian/patches/001-scanimage_manpage.patch:
     - Add remark for parameter to manpage (Closes: #418630).
@@ -10,7 +10,7 @@ sane-backends (1.0.24-10) unstable; urgency=low
     - Make builds reproducible.
   * debian/control:
     - On package libsane-dev change Depends from libgphoto2-2-dev to
-      libgphoto2-dev (auto-libgphoto2 transition).
+      libgphoto2-dev (auto-libgphoto2 transition) (Closes: #783822).
     - On package libsane remove package hpoj from Suggests
     - Remove useless replaces because latest release in stable is 1.0.22-7:
       + sane-utils: libsane (<< 1.0.11-4)
@@ -22,10 +22,9 @@ sane-backends (1.0.24-10) unstable; urgency=low
   * debian/rules:
     - Enable pnm backend for testing.
     - Remove override_dh_builddeb because compression xz is now standard.
-    - Add configure parameter --without-vl4 to disable v4l
-      backend (Closes: #446015).
-      + The backend is writen for the kernel 2.4 and v4l. Now
-        we are at kernel 3.16 and v4l2.
+    - Add configure parameter --without-vl4 to disable v4l backend:
+      + The backend was written for the kernel 2.4 and v4l, now
+        we are at kernel 3.16 and v4l2 (Closes: #446015).
   * debian/saned@.service:
     - Remove Alias from [Install] Section (Closes: #778268).
   * sane-utils.[postinst|postrm]:
@@ -34,20 +33,18 @@ sane-backends (1.0.24-10) unstable; urgency=low
   * Add autopkgtests:
     - debian/control:
       + Add Testsuite: autopkgtest.
-    - New debian/tests/control
+    - New debian/tests/control.
     - New debian/tests/start-net:
-      - Testing network interface activation with systemd.
-  * Refresh patches:
-    - debian/patches/sane-desc.c_debian_mods.patch.
+      + Test network interface activation with systemd.
   * Add symbols file:
-    - debian/rules: rewrite override_dh_makeshlibs.
-  * Comment out "set -e" at debian/sane-utils.postrm to prevent
-    piuparts errors
+    - debian/rules: Rewrite override_dh_makeshlibs.
+  * Comment out "set -e" at debian/sane-utils.postrm
+    to fix some minor errors during piuparts.
   * debian/saned@.service:
     - Change StandardInput=socket to StandardInput=null to enable
       working over network (Closes: #782971).
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 25 Apr 2015 15:36:24 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 01 May 2015 08:10:00 +0200
 
 sane-backends (1.0.24-9) unstable; urgency=medium
 
