--- a/debian/changelog
+++ b/debian/changelog
@@ -19,12 +19,16 @@ sane-backends (1.0.24-10) unstable; urgency=high
       + libsane-dev: libsane-extras-dev (<< 1.0.18.14)
       + libsane-dbg: libsane-extras-dbg (<< 1.0.18.14)
     - Remove "libv4l-dev [linux-any]" from Build-Depends and Depends.
+    - To enable net snmp add libsnmp-dev to Build-Depends.
+    - To autodetect network scanners in kodakaio add libcups2-dev
+      to Build-Depends.
   * debian/rules:
     - Enable pnm backend for testing.
     - Remove override_dh_builddeb because compression xz is now standard.
     - Add configure parameter --without-vl4 to disable v4l backend:
       + The backend was written for the kernel 2.4 and v4l, now
         we are at kernel 3.16 and v4l2 (Closes: #446015).
+    - Remove configure parameter -with-snmp=no to enable net snmp.
   * debian/saned@.service:
     - Remove Alias from [Install] Section (Closes: #778268).
   * sane-utils.[postinst|postrm]:
