--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 sane-backends (1.0.24-11) unstable; urgency=medium
 
-  * Add Pre-Depends dpkg (>= 1.17.5) to package libsane-common to
-    prevent not found error of rm_conf at upgrade (Closes: #784763).
-  * At debian/libsane-common.preinst correct dpkg-maintscript-helper call.
+  * debian/control:
+    - Add dpkg (>= 1.15.7.2) to Pre-Depends of package libsane-common since
+      dpkg needs to be installed for the rm_conffile command to work
+      (Closes: #784763).
+  * debian/libsane-common.preinst:
+     - Fix syntax for calling dpkg-maintscript-helper.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 08 May 2015 22:02:11 +0200
 
