Build sane.ps without comments containing date/time

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ sane-backends (1.0.24-12) UNRELEASED; urgency=medium
 
   * debian/sane-utils.postinst:
     - Fix home directory move (Closes: #785709).
+  * debian/patches/0005-mk_reproducible_results.patch:
+    - Build sane.ps without comments containing date/time.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 21 May 2015 08:25:53 +0200
 
