--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-sane-backends (1.0.24-12) UNRELEASED; urgency=medium
+sane-backends (1.0.24-12) unstable; urgency=medium
 
   * debian/sane-utils.postinst:
     - Fix home directory move (Closes: #785709).
   * debian/patches/0005-mk_reproducible_results.patch:
     - Build sane.ps without comments containing date/time.
+  * New debian/patches/0105-artec_missing_home_environment.patch:
+    - Test the environment variable HOME before use (Closes: #786452).
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 21 May 2015 08:25:53 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 21 May 2015 13:11:11 +0200
 
 sane-backends (1.0.24-11) unstable; urgency=medium
 
