--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,14 @@ sane-backends (1.0.24-12) unstable; urgency=medium
     - Build sane.ps without comments containing date/time.
   * New debian/patches/0105-artec_missing_home_environment.patch:
     - Test the environment variable HOME before use (Closes: #786452).
-  * debian/control
+  * debian/control:
     - Add "Multi-Arch: same" to package libsane-dev to make 
       it co-installable (Closes: #786560).
+  * New debian/sane-utils.links:
+    - Add a link from /dev/null to /lib/systemd/system/saned.service
+      to prevent start over fallback /etc/init.d/saned.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Fri, 22 May 2015 09:12:57 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Mon, 25 May 2015 09:23:16 +0200
 
 sane-backends (1.0.24-11) unstable; urgency=medium
 
