--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-sane-backends (1.0.25+git20150425-2) UNRELEASED; urgency=medium
+sane-backends (1.0.25+git20150528-1) experimental; urgency=medium
 
-  * Sync with sane-backends/1.0.24-11.
+  * Build from daily snapshot sane-backends-git20150528.tar.gz.
+  * Sync with sane-backends/1.0.24-13.
+  * New debian/patches/0105-fuj-126a.patch:
+    - Upstream patch for testing Fujitsu backend adjust 
+      brightness and threshold.
 
- -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 09 May 2015 08:52:46 +0200
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 28 May 2015 07:43:42 +0200
 
 sane-backends (1.0.25+git20150425-1) experimental; urgency=low
 
