--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sane-backends (1.0.24-14) UNRELEASED; urgency=medium
+
+  * debian/TROUBLESHOOTING.Debian:
+    - Add section if device file system does not support ACLs
+      (Closes: #789593).
+
+ -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 28 Jun 2015 10:12:36 +0200
+
 sane-backends (1.0.24-13) unstable; urgency=medium
 
   * debian/rules:
